tests/snapshots/blockflow/blocks/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - blocks
    - foo
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'foo' for '<FROM_TS>': invalid digit found in string

For more information, try '--help'.
