tests/snapshots/blockflow/blocks/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - blocks
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FROM_TS>

Usage: kermit blockflow blocks <FROM_TS> [TO_TS]

For more information, try '--help'.
